RESOLVED FIXED 99640
[GTK] AccessibilityUIElement::role() should be consistent across platforms wherever possible
https://bugs.webkit.org/show_bug.cgi?id=99640
Summary [GTK] AccessibilityUIElement::role() should be consistent across platforms wh...
Joanmarie Diggs
Reported 2012-10-17 14:24:44 PDT
Because AccessibilityUIElement::role() is not consistent across platforms, any accessibility test that includes the accessible role in the expected output necessarily becomes platform-specific. This situation <strike>sucks incredibly</strikes> is far from ideal. The Chromium port already does a mapping to the Mac/Safari roles. When this is possible and logical for AtkRole, we should do the same.
Attachments
Patch (61.24 KB, patch)
2012-10-17 14:30 PDT, Joanmarie Diggs
no flags
Joanmarie Diggs
Comment 1 2012-10-17 14:30:01 PDT
Martin Robinson
Comment 2 2012-10-17 14:34:06 PDT
Comment on attachment 169261 [details] Patch Great stuff! Instead of updating platform results, can they be removed now in favor of shared results?
Dominic Mazzoni
Comment 3 2012-10-17 14:37:01 PDT
+1 for cross-platform tests. There is still a need for platform-specific roles - there are some roles that are unique to a particular platform. What I'd like to see in addition to this is a way for a test to query the underlying WebCore role. But, this is very helpful in the meantime.
Joanmarie Diggs
Comment 4 2012-10-17 14:42:00 PDT
(In reply to comment #2) > (From update of attachment 169261 [details]) > Great stuff! Instead of updating platform results, can they be removed now in favor of shared results? A few should fall into that category, but I haven't done that in this patch. Some others have different hierarchies which (currently) makes that not doable. HOWEVER, my goal is to keep working in this general area and collaborating with Chris and Dominic to one day bring about <strike>world peace</strike> platform-independence in the a11y tests. :) (In reply to comment #3) > +1 for cross-platform tests. > > There is still a need for platform-specific roles - there are some roles that are unique to a particular platform. Yup. But with any luck we can narrow those down to a mere few. > What I'd like to see in addition to this is a way for a test to query the underlying WebCore role. +1 > But, this is very helpful in the meantime. :) Thanks!
chris fleizach
Comment 5 2012-10-17 16:43:32 PDT
(In reply to comment #4) > (In reply to comment #2) > > (From update of attachment 169261 [details] [details]) > > Great stuff! Instead of updating platform results, can they be removed now in favor of shared results? > > A few should fall into that category, but I haven't done that in this patch. Some others have different hierarchies which (currently) makes that not doable. HOWEVER, my goal is to keep working in this general area and collaborating with Chris and Dominic to one day bring about <strike>world peace</strike> platform-independence in the a11y tests. :) Agreed, we should try to remove those duplicated tests soon now > > (In reply to comment #3) > > +1 for cross-platform tests. > > > > There is still a need for platform-specific roles - there are some roles that are unique to a particular platform. > > Yup. But with any luck we can narrow those down to a mere few. > > > What I'd like to see in addition to this is a way for a test to query the underlying WebCore role. > > +1 > > > But, this is very helpful in the meantime. > > :) Thanks!
WebKit Review Bot
Comment 6 2012-10-17 17:07:14 PDT
Comment on attachment 169261 [details] Patch Clearing flags on attachment: 169261 Committed r131674: <http://trac.webkit.org/changeset/131674>
WebKit Review Bot
Comment 7 2012-10-17 17:07:19 PDT
All reviewed patches have been landed. Closing bug.
Joanmarie Diggs
Comment 8 2012-10-17 17:10:11 PDT
(In reply to comment #5) > (In reply to comment #4) > > (In reply to comment #2) > > > (From update of attachment 169261 [details] [details] [details]) > > > Great stuff! Instead of updating platform results, can they be removed now in favor of shared results? > > > > A few should fall into that category, but I haven't done that in this patch. Some others have different hierarchies which (currently) makes that not doable. HOWEVER, my goal is to keep working in this general area and collaborating with Chris and Dominic to one day bring about <strike>world peace</strike> platform-independence in the a11y tests. :) > > Agreed, we should try to remove those duplicated tests soon now Martin told me about Tools/Scripts/webkit-patch analyze-baselines accessibility These are the results: LayoutTests/platform/gtk/accessibility/svg-image-expected.txt LayoutTests/platform/mac/accessibility/svg-image-expected.txt LayoutTests/platform/gtk/accessibility/aria-roles-expected.txt LayoutTests/platform/mac/accessibility/aria-roles-expected.txt LayoutTests/platform/chromium/accessibility/aria-roles-expected.txt LayoutTests/platform/gtk/accessibility/aria-checkbox-text-expected.txt LayoutTests/platform/mac/accessibility/aria-checkbox-text-expected.txt LayoutTests/platform/gtk/accessibility/aria-labelledby-overrides-aria-label-expected.txt LayoutTests/platform/mac/accessibility/aria-labelledby-overrides-aria-label-expected.txt LayoutTests/platform/chromium/accessibility/aria-labelledby-overrides-aria-label-expected.txt LayoutTests/platform/gtk/accessibility/aria-tables-expected.txt LayoutTests/platform/mac/accessibility/aria-tables-expected.txt LayoutTests/platform/gtk/accessibility/aria-combobox-expected.txt LayoutTests/platform/mac/accessibility/aria-combobox-expected.txt LayoutTests/platform/gtk/accessibility/img-alt-tag-only-whitespace-expected.txt LayoutTests/platform/mac/accessibility/img-alt-tag-only-whitespace-expected.txt LayoutTests/platform/gtk/accessibility/aria-toggle-button-with-title-expected.txt LayoutTests/platform/chromium/accessibility/aria-toggle-button-with-title-expected.txt LayoutTests/platform/gtk/accessibility/aria-fallback-roles-expected.txt LayoutTests/platform/mac/accessibility/aria-fallback-roles-expected.txt LayoutTests/platform/chromium/accessibility/aria-fallback-roles-expected.txt Is it safe to move a copy of each of those -expected.txt into LayoutTests/accessibility and then delete the remaining copies? If so I'll do that.
Note You need to log in before you can comment on or make changes to this bug.